--- a/backend/package.json
+++ b/backend/package.json
@@ -1,1 +1,16 @@
-
+{
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "Backend for full-stack application",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "cors": "^2.8.5",
+    "mongoose": "^5.10.9"
+  },
+  "author": "Your Name",
+  "license": "ISC"
+}
