--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "cors": "^2.8.5",
-    "mongoose": "^5.10.9"
+    "mongoose": "^5.10.9",
+    "dotenv": "^10.0.0"
   },
   "author": "Your Name",
   "license": "ISC"
